k8s-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-job-manager
  labels:
    app: k8s-job-manager
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: k8s-job-manager
  template:
    metadata:
      labels:
        app: k8s-job-manager
    spec:
      containers:
      - name: k8s-job-manager
        image: 52north/pygeoapi-k8s-manager:latest
        imagePullPolicy: Always
        resources:
          # adjust asap to your set-up
          requests:
            memory: "512M"
            cpu: "100m"
          limits:
            memory: "768M"
            cpu: "250m"
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config
          mountPath: /pygeoapi/local.config.yml
          subPath: local.config.yml
      volumes:
      - name: config
        configMap:
          name: k8s-job-manager-config
      restartPolicy: Always
      serviceAccountName: k8s-job-manager
