k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-job-manager
  labels:
    app: k8s-job-manager
spec:
  selector:
    app: k8s-job-manager
  ports:
  - name: "http"
    port: 80
    targetPort: 80
